--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Dream/20250612_225056700_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Dream/20250612_225056700_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -471,7 +471,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Dream/20250613_002704190_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Dream/20250613_002704190_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -485,7 +485,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Dream/20250613_012910430_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Dream/20250613_012910430_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -499,7 +499,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/Studio/20250622_025831460_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/Studio/20250622_025831460_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -513,7 +513,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery"
+                                <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery" loading="lazy"
                                     style="object-position: top;">
                             </div>
                             <div class="gallery_content">
@@ -531,7 +531,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -545,7 +545,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery"
+                                <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery" loading="lazy"
                                     style="object-position: top;">
                             </div>
                             <div class="gallery_content">
@@ -560,7 +560,7 @@
                     <div class="col-lg-3 col-sm-6">
                         <div class="single_gallery wow fadeInDown">
                             <div class="gallery_image">
-                                <img src="assets/images/Gallery/VietPhuc/20250622_042445990_iOS.webp" alt="gallery">
+                                <img src="assets/images/Gallery/VietPhuc/20250622_042445990_iOS.webp" alt="gallery" loading="lazy">
                             </div>
                             <div class="gallery_content">
                                 <ul class="gallery_icon">
@@ -617,49 +617,49 @@
                         <div class="bb-custom-wrapper">
                             <div id="bb-bookblock_1" class="bb-bookblock">
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_1.jpg" alt="Layout_1" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_1.jpg" alt="Layout_1" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_2.jpg" alt="Layout_2" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_2.jpg" alt="Layout_2" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_3.jpg" alt="Layout_3" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_3.jpg" alt="Layout_3" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_4.jpg" alt="Layout_4" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_4.jpg" alt="Layout_4" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_5.jpg" alt="Layout_5" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_5.jpg" alt="Layout_5" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_6.jpg" alt="Layout_6" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_6.jpg" alt="Layout_6" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_7.jpg" alt="Layout_7" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_7.jpg" alt="Layout_7" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_8.jpg" alt="Layout_8" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_8.jpg" alt="Layout_8" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_9.jpg" alt="Layout_9" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_9.jpg" alt="Layout_9" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_10.jpg" alt="Layout_10" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_10.jpg" alt="Layout_10" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_11.jpg" alt="Layout_11" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_11.jpg" alt="Layout_11" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_12.jpg" alt="Layout_12" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_12.jpg" alt="Layout_12" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_13.jpg" alt="Layout_13" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_13.jpg" alt="Layout_13" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_14.jpg" alt="Layout_14" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_14.jpg" alt="Layout_14" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum1/Layout_15.jpg" alt="Layout_15" /></a>
+                                    <a><img src="assets/images/Ablum1/Layout_15.jpg" alt="Layout_15" fetchpriority="low" /></a>
                                 </div>
 
                             </div>
@@ -695,49 +695,49 @@
                         <div class="bb-custom-wrapper">
                             <div id="bb-bookblock_2" class="bb-bookblock">
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_1.jpg" alt="Layout_1" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_1.jpg" alt="Layout_1" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_2.jpg" alt="Layout_2" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_2.jpg" alt="Layout_2" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_3.jpg" alt="Layout_3" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_3.jpg" alt="Layout_3" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_4.jpg" alt="Layout_4" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_4.jpg" alt="Layout_4" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_5.jpg" alt="Layout_5" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_5.jpg" alt="Layout_5" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_6.jpg" alt="Layout_6" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_6.jpg" alt="Layout_6" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_7.jpg" alt="Layout_7" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_7.jpg" alt="Layout_7" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_8.jpg" alt="Layout_8" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_8.jpg" alt="Layout_8" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_9.jpg" alt="Layout_9" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_9.jpg" alt="Layout_9" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_10.jpg" alt="Layout_10" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_10.jpg" alt="Layout_10" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_11.jpg" alt="Layout_11" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_11.jpg" alt="Layout_11" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_12.jpg" alt="Layout_12" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_12.jpg" alt="Layout_12" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_13.jpg" alt="Layout_13" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_13.jpg" alt="Layout_13" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_14.jpg" alt="Layout_14" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_14.jpg" alt="Layout_14" fetchpriority="low" /></a>
                                 </div>
                                 <div class="bb-item">
-                                    <a><img src="assets/images/Ablum2/Layout_15.jpg" alt="Layout_15" /></a>
+                                    <a><img src="assets/images/Ablum2/Layout_15.jpg" alt="Layout_15" fetchpriority="low" /></a>
                                 </div>
                             </div>
                             <nav>
