update css & image

--- a/index.html
+++ b/index.html
@@ -102,33 +102,33 @@
         </div> <!-- header navbar -->
         <div id="home" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item carousel-item1 active">
                     <div class="single_slider bg_cover d-flex align-items-center"
                         style="background-image: url(assets/images/slider-1.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item2">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-2.jpg) top -80px center/cover no-repeat local; ">
+                        style="background-image: url(assets/images/slider-2.jpg); ">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item3">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-3.jpg) center center/cover no-repeat local;">
+                        style="background-image: url(assets/images/slider-3.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item4">
                     <div class="single_slider bg_cover d-flex align-items-center"
                         style="background-image: url(assets/images/slider-4.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item5">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-5.jpg) top -80px center/cover no-repeat local;">
+                        style="background-image: url(assets/images/slider-5.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
@@ -455,7 +455,7 @@
                 <div class="row no-gutters">
 
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/Dream/20250612_225056700_iOS.webp" alt="gallery" loading="lazy">
                             </div>
@@ -469,7 +469,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/Dream/20250613_002704190_iOS.webp" alt="gallery" loading="lazy">
                             </div>
@@ -483,7 +483,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/Dream/20250613_012910430_iOS.webp" alt="gallery" loading="lazy">
                             </div>
@@ -497,7 +497,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/Studio/20250622_025831460_iOS.webp" alt="gallery" loading="lazy">
                             </div>
@@ -511,7 +511,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/HyPhuc/20250622_053056940_iOS.webp" alt="gallery" loading="lazy"
                                     style="object-position: top;">
@@ -529,7 +529,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/HyPhuc/20250622_051433990_iOS.webp" alt="gallery" loading="lazy">
                             </div>
@@ -543,7 +543,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/VietPhuc/20250622_042602110_iOS.webp" alt="gallery" loading="lazy"
                                     style="object-position: top;">
@@ -558,7 +558,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <div class="single_gallery wow fadeInDown">
+                        <div class="single_gallery wow fadeInUp">
                             <div class="gallery_image">
                                 <img src="assets/images/Gallery/VietPhuc/20250622_042445990_iOS.webp" alt="gallery" loading="lazy">
                             </div>
