--- a/index_china.html
+++ b/index_china.html
@@ -104,31 +104,31 @@
         </div> <!-- header navbar -->
         <div id="home" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item carousel-item1 active">
                     <div class="single_slider bg_cover d-flex align-items-center"
                         style="background-image: url(assets/images/slider-1.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item2">
                     <div class="single_slider bg_cover d-flex align-items-center"
                         style="background: url(assets/images/slider-2.jpg) top -80px center/cover no-repeat local; ">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item3">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-3.jpg) center center/cover no-repeat local;">
+                        style="background-image: url(assets/images/slider-3.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item4">
                     <div class="single_slider bg_cover d-flex align-items-center"
                         style="background-image: url(assets/images/slider-4.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-item5">
                     <div class="single_slider bg_cover d-flex align-items-center"
                         style="background: url(assets/images/slider-5.jpg) top -80px center/cover no-repeat local;">
 
