--- a/index_china.html
+++ b/index_china.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="carousel-item carousel-item2">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-2.jpg) top -80px center/cover no-repeat local; ">
+                        style="background-image: url(assets/images/slider-2.jpg); ">
 
                     </div> <!-- single slider -->
                 </div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="carousel-item carousel-item5">
                     <div class="single_slider bg_cover d-flex align-items-center"
-                        style="background: url(assets/images/slider-5.jpg) top -80px center/cover no-repeat local;">
+                        style="background-image: url(assets/images/slider-5.jpg)">
 
                     </div> <!-- single slider -->
                 </div>
