--- a/index_china.html
+++ b/index_china.html
@@ -815,6 +815,33 @@
 
     <!--====== EVENT PART ENDS ======-->
 
+    <!--====== MAP PART START ======-->
+
+    <section id="event" class="map_area pt-120 pb-130">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="section_title text-center pb-30">
+                        <h3 class="title">酒楼地图</h3>
+                        <img src="assets/images/section_shape.png" alt="Shape">
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+            <div class="row justify-content-center">
+                <div class="col-lg-12 col-md-7">
+                    <div class="mt-30 wow fadeInUpBig" data-wow-duration="1.3s" data-wow-delay="0.2s">
+                        <div class="map_image">
+                            <img src="assets/images/map.svg" alt="map">
+                        </div>
+                    </div> <!-- single event -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <!--====== MAP PART ENDS ======-->
+
+
     <!--====== TESTIMONIAL ======-->
     <section id="testimonial" class="testimonial_area pt-120 pb-130" style="display: none;">
         <div class="testimonial_shape_1">
