--- a/index_china.html
+++ b/index_china.html
@@ -406,7 +406,7 @@
 
     <section id="video" class="video-section event-section section-padding pt-120">
         <div class="top-area"
-            style="background: url(./assets/images/video_background.jpg) top -80px center/cover no-repeat local; ">
+            style="background: url(./assets/images/video_background.jpg) 75% 13% /cover no-repeat local; ">
             <h2>我们的爱情视频</h2>
             <img src="assets/images/section_shape.png" alt="Shape"
                 style="filter: brightness(0) invert(1); margin-block: 10px 20px; ">
